--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.4.1
 autopep8==1.6.0
 backports.zoneinfo==0.2.1
 Django==4.0
+django-crispy-forms==1.14.0
 djangorestframework==3.13.1
 gunicorn==20.1.0
 joblib==1.1.0
